before cleaning up phase 1 findings

--- a/_main.tex
+++ b/_main.tex
@@ -20,7 +20,7 @@
 \usepackage{placeins}
 \usepackage{titlesec}
 \usepackage{enumitem}
-
+\usepackage{tabularx}
 
 
 \newcommand{\todo}[1]{\textcolor{red}{[TODO: #1]}}
