--- a/sections/4_interview_findings.tex
+++ b/sections/4_interview_findings.tex
@@ -4,7 +4,7 @@
 \subsection{Novice Visual Artists' Early-Stage Practices and Broader Contexts}
 We report below specific practices that novice visual artists currently engage in during the early stages of their creative workflows.
 \subsubsection{Motivations \& Communities for Art-Making.}
-Compared to professional or outcome-driven goals, novice participants were more motivated by (1) \textbf{intrinsic enjoyment} and (2) \textbf{interactions with others} that provided support and sources of inspiration. For instance, P14 described how \textit{``a lot of the art that I create on a slightly more frequent basis \dots is for journaling purposes''}, while P4 perceived art-making as \textit{``a very solo experience \dots  [that] I do alone to connect with myself and make something that makes me feel better about the world''} (P4). Beyond reflections, P10 related the calming benefits of art-making: \textit{``I really enjoy drawing old toys. \dots It['s] just a relaxing thing for me''} (P10). For others, motivation was shaped by moments of external recognition or affirmation, with several novices crediting teachers, friends, or family members who encouraged them to create art. P10 recalled a class where the teacher
+Compared to professional or outcome-driven goals, novice participants were more motivated by (1) \textbf{intrinsic enjoyment} and (2) \textbf{interactions with others} that provided support and sources of inspiration. For instance, P6 described how \textit{``a lot of the art that I create on a slightly more frequent basis \dots is for journaling purposes''}, while P4 perceived art-making as \textit{``a very solo experience \dots  [that] I do alone to connect with myself and make something that makes me feel better about the world''} (P4). Beyond reflections, P10 related the calming benefits of art-making: \textit{``I really enjoy drawing old toys. \dots It['s] just a relaxing thing for me''} (P10). For others, motivation was shaped by moments of external recognition or affirmation, with several novices crediting teachers, friends, or family members who encouraged them to create art. P10 recalled a class where the teacher
 \textit{``ask[ed] me there}, `oh my gosh, are you an artist? This looks fantastic!' \dots \textit{So I started looking at Tiktok videos of it, and I was able to start painting with it''}. Several took up visual art after seeing other artist's work. Such experiences made novice artists like P12 \textit{``think of something that I've never thought of before. \dots and [then] I feel creative''} (P12). Together, these findings highlight how novice artists' motivation emerges from a blend of intrinsic enjoyment, relational encouragement, and a desire to respond creatively to the world around. 
 
 Participants also gather input from people in their lives and sought broader ties with artists and communities. P12 asked friends \textit{``what's something [that] is not right about this image? \dots [Because if] the eye is in the wrong position, for example, I just can't see it''}. For others, being around other artists and their work was a beneficial source of inspiration (e.g., P4). In one interesting case, P11 enjoyed drawing with \textit{Art Fight}\footnote{https://artfight.net/} --- a platform bringing artists online together to create different versions of each other's work, which P11 described as \textit{``a drawing event that happens in July. Everybody joins a team, and you draw other people's characters, and you get points for it \dots it's the game''}. 
@@ -28,13 +28,13 @@ This blend of community engagement and collaborative learning highlights nuanced
 % Participants’ creative practices were deeply influenced by their 
 Uneven access to digital tools (and self-taught approaches to learning them) deeply influenced novices' creative practices -- leaving them intimidated or under-equipped. 
 Toward digital and AI-supported tools, participants expressed a mix of (1) \textbf{intimidation} by unfamiliar tools and (2) \textbf{excitement} to embrace advanced digital and AI features but also (3) \textbf{nuanced views} on the ethics of generative AI tools.  
-For some, even non-AI-based digital tools felt inaccessible and intimidating: \textit{``I'm not good with computers, so I don't really mess with [digital tools]''} (P9). Other participants expressed excitement about the practical upsides of AI, looking forward to uses such as AI reducing the burden of manual browsing to find inspiration (P6) and allowing faster and easier manipulation of references (P13). 
-% or searching large reference databases, AI reduced the overwhelm of manual browsing (P6).
+For some, even non-AI-based digital tools felt inaccessible and intimidating: \textit{``I'm not good with computers, so I don't really mess with [digital tools]''} (P9). Other participants expressed excitement about the practical upsides of AI, looking forward to uses such as AI reducing the burden of manual browsing to find inspiration and allowing faster and easier manipulation of references (P13). 
+
 
 % One recurring concern is the influence of generated images or limitations to an artist’s own creative vision. 
 % Others expressed an openness to AI tools under certain conditions For example, P8 required an ethical compensation model, describing \textit{``a tool that was \textbf{created by artists for artists}, where \dots [there are] royalties, \dots where the artist approves and can control their art \dots I would definitely use it.''} 
 However, many remained wary of the impact of using generative AI tools on creative vision, professional identity, and the integrity of the artistic community. 
-P14 described an instance of a generated image reshaping their mental vision of a character in unintended ways, where the output \textit{``is completely inaccurate to how I first imagined her. She had a much rounder face. \dots I still have this mental image [of the character]\dots I'm sad that I didn't articulate that myself first before being biased by [the generated image].''} Others added that generated content often appeared uniform, overly polished, or illogical for learning or inspiration, with anatomical and compositional errors that could mislead practice (P13, P11). Several worried that AI encourages cultural sameness that devalues original work (P10, P6). Concerns about professional identity centered on authorship and livelihoods. Participants cited the lack of ethical compensation models and the use of copyrighted material, and emphasized authenticity as a core value of the artist role. Some viewed AI generated art sold for profit as undercutting traditional income streams (P8, P11). 
+P6 described an instance of a generated image reshaping their mental vision of a character in unintended ways, where the output \textit{``is completely inaccurate to how I first imagined her. She had a much rounder face. \dots I still have this mental image [of the character]\dots I'm sad that I didn't articulate that myself first before being biased by [the generated image].''} Others added that generated content often appeared uniform, overly polished, or illogical for learning or inspiration, with anatomical and compositional errors that could mislead practice (P13, P11). Several worried that AI encourages cultural sameness that devalues original work (P10). Concerns about professional identity centered on authorship and livelihoods. Participants cited the lack of ethical compensation models and the use of copyrighted material, and emphasized authenticity as a core value of the artist role. Some viewed AI generated art sold for profit as undercutting traditional income streams (P8, P11). 
 
 Finally, participants raised issues of community integrity and infrastructure. Some wanted clear labeling to avoid inadvertently using AI generated references in their process (P13), others expressed discomfort with environmental costs and systems that operate without permission or compensation, making it hard to imagine adopting these tools: 
 \begin{quote}
@@ -45,7 +45,7 @@ Overall, participants weighed uneven access and limited familiarity against exci
 
 % P12 and P4 consider emotional impact and authenticity of art to be foundational to artist’s story and process, which cannot be replicated by AI-generated work. 
 % Artists want to connect with the inspirations, techniques, and narratives behind human-made art for sense of community and belongingness. 
-% P9 and P6 share how AI-generated images rarely inspire them the way that real-world experiences or handmade works do, whereas the pleasure of searching for references and abstracting from reality cannot be replaced by AI generation.
+% P9 share how AI-generated images rarely inspire them the way that real-world experiences or handmade works do, whereas the pleasure of searching for references and abstracting from reality cannot be replaced by AI generation.
 
 % \begin{table}[t]
 % \centering
@@ -122,6 +122,8 @@ Overall, participants weighed uneven access and limited familiarity against exci
 
 
 
+\textbf{\textit{Fig 1. Initial Taxonomy v1 after interviews (original needs/what participant mentioned/with lit examples of possible capabilities/considerations)}}
+
 \subsection{Areas for Support in the Early-Stages} % validation findings need to go here 
 
 % \textbf{need}
@@ -140,9 +142,8 @@ We conclude with considerations for potential tool development, including envisi
 \subsubsection{Quicker and Better Access to References.} Participants frequently struggled to find reference images that match their creative intent, reporting current tools as frustratingly limited in surfacing relevant or high-quality material.
 % context of current practices
 % Participants frequently gathered inspiration from real-life and digital resources (e.g., Google Images, Pinterest), yet some found existing tools frustratingly limited in surfacing relevant or high-quality reference materials. 
-Several participants regularly search references on Google Image Search (P1, 5, 12), Pinterest (P1, 2, 5, 9, 11, 13), and social media (P5, 7, 9, 11, 12, 13). P13 reflected how as a novice artist \textit{``I have a hard time drawing from imagination, and so \dots I go on Pinterest and look up pictures''} (P13). 
-%When gathering these references, participants were sometimes seeking broader goals such as stimulation for ideas to create a piece: \textit{``there's making a concept which needs to be understandable, accessible, and visually simulating at the end of it''} (P6). 
-For others, references were important technical models for poses of objects, or specific human bodies and expressions (P4, P5, P14). 
+Several participants regularly search references on Google Image Search (P1, 5, 12), Pinterest (P1, 2, 5, 9, 11, 13), and social media (P5, 7, 9, 11, 12, 13). P13 reflected how, as a novice artist \textit{``I have a hard time drawing from imagination, and so \dots I go on Pinterest and look up pictures''} (P13). 
+For others, references were important technical models for poses of objects, or specific human bodies and expressions (P4, P5, P6). 
 
 % explain the challenge
 The difficulty of finding references that aligned with creative intent posed a persistent challenge for participants, who highlighted needs for more natural and intuitive ways to gather references. P8 envisioned
@@ -168,10 +169,10 @@ To manage these gaps, participants developed various workarounds to obtain desir
 % \textit{``I look up like [the word] `upset,' and then I get disappointed because the pictures are not what I want. So then I keep thinking about it, and I become, I get more and more precise, like `upset man staring out the window beings. And then usually, I really start thinking of movies or things I've seen at that point that kind of give me that vibe. And then I think about that, or about games I played and what vibe they have. When pictures [of real] faces [from Google search] let me down, I look up [works from] actual artists.''} - P8
 % \end{quote}
 Many artists also manually changed reference images, using Photoshop to combine different objects in their planned art (P5, P13); P9 combined real-life references with certain artistic styles (P12). Others directly edited and interacted with a single reference  --- P7 developed an app to blur certain details in reference photos, but expressed a desire for more complex tooling: \textit{``it would be really cool if a system could take in a picture and just \textbf{get the main essence of the of the scene, and get rid of all the unnecessary details}''} (P7).
-%P14 makes their own reference photos by taking photos of their hands when they could not find a desired perspective or pose.
+%P6 makes their own reference photos by taking photos of their hands when they could not find a desired perspective or pose.
 % reference that was from the perspective and pose they were imagining.  
 % Lastly, some artists described having to scroll through all of their saved references, whether they were from search engine results or photos they took themselves. 
-Lastly, participants described the manual experience of scrolling through their references (e.g., search engine results, own photos) -- while some enjoyed revisiting all their reference images (P9), others found manual browsing of their reference library to be time-consuming (P6, P9).   
+Lastly, participants described the manual experience of scrolling through their references (e.g., search engine results, own photos) -- while some enjoyed revisiting all their reference images (P9), others found manual browsing of their reference library to be time-consuming (P9).   
 
 
 % \todo{paul - seems very long quotes do we need all of them?} 
@@ -185,7 +186,7 @@ Another challenge participants faced was combining multiple references into a co
 Some used interactive references in place of multiple reference perspectives. For example, P1 explained that if they needed a reference \textit{``for human anatomy, I would personally go to download an app, like a medical app \dots because it's a 3d map. You can just rotate around the body \dots you can see all the muscles and how they work''} (P1). These examples illustrate how existing tools for combining or interacting with reference images often only supported fragments of participants' needs, leading them to use workarounds for fitting pieces together. While such strategies helped approximate visions, participants often required significant effort to interpret or manually blend references.
 
 % opportunities participants suggest
-While P1 was resourceful in finding such references, other artists expressed desires for a dedicated and accessible tool. Some envisioned interactive \textbf{systems for manipulating poses, perspectives, or stylistic features in real time}. When reflecting on an art piece they completed, P14 expressed that \textit{``it would have been really useful to have a pose of that thing falling in a realistic style''} that shows a \textit{``puppet reaching into the air with that particular pose from the angle that I want''} (P14). P8 shared a similar need to manipulate a human-like puppet and \textit{``move the face to make it mad''} (P8). 
+While P1 was resourceful in finding such references, other artists expressed desires for a dedicated and accessible tool. Some envisioned interactive \textbf{systems for manipulating poses, perspectives, or stylistic features in real time}. When reflecting on an art piece they completed, P6 expressed that \textit{``it would have been really useful to have a pose of that thing falling in a realistic style''} that shows a \textit{``puppet reaching into the air with that particular pose from the angle that I want''} (P6). P8 shared a similar need to manipulate a human-like puppet and \textit{``move the face to make it mad''} (P8). 
 These suggestions highlight artists' desire for tools that not only provide static references but also allow them to manipulate and combine references dynamically.
 
 
