--- a/sections/5_workshop_probes.tex
+++ b/sections/5_workshop_probes.tex
@@ -1,23 +1,23 @@
-\subsection{Development of Co-design Probes} \label{probes}
+\subsection{Interactive Co-design Probes} \label{probes}
 % \jc{add motivations (table): needs $\rightarrow$ prototypes}
 \begin{figure}[tbp]
     \centering
     \resizebox{1\textwidth}{!}
     {\includegraphics{figures/Prototypes.pdf}}
-    \caption{\textbf{Development of Co-design Probes.} Six interactive prototypes developed to explore AI-assisted design workflows:  (1) Visual Editing for direct manipulation with generative tools, and (2) Interactive 3D for extending 2D edits into three-dimensional space. (3) Step-by-Step Tutorial for generating process breakdowns from finished works. (4) Style Transfer for applying a qualities between images, (5) Medium Transfer for transforming images across artistic media, (6) Style Combination for merging multiple visual references. Each prototype addresses specific designer needs identified through user interviews.}
+    \caption{\textbf{Development of Co-design Probes.} Six interactive prototypes were developed to address needs identified through user interviews and to explore AI-assisted design workflows, belonging to three broad categories. (1) Structure-to-style refinement tools help artists progressively convert initial ``structured'' forms (e.g., a basic shape, outline, style, or geometric layout) into more aesthetically complex or stylized versions, such as visual editing, style transfer, and medium transfer. (2) Reference, capture, and 3D-staging tools help search, store, and combine references to source material (e.g., style combination) in both 2D and multi-view 3D environments (e.g., interactive 3D creation from a single image). (3) Transparency, learning, and community-based tools help make the most salient parts of the input more transparent, such as step-by-step tutorials of visual content to help artists learn new techniques and styles.}
     \label{fig:prototypes}
 \end{figure}
 
-Based on the needs identified through our interviews, we developed co-design probes. Each prototype responds to specific needs that emerged from our user research while demonstrating the potential for AI tools to augment creative workflows. At a high level, these tools fall into three categories: (1) reference, capture, 3D-staging, (2) structure-to-style refinement, and (3) transparency, learning, community. While we presented these tools in isolation, participants were given freedom to use them in any combination they choose multiple tools together, potentially across multiple steps to achieve more desired effects.
-
-
-\textbf{\textit{Fig 1. Initial Taxonomy v1 after interviews (original needs/what participant mentioned/with lit examples of possible capabilities/considerations)}}
+Based on novice artist challenges identified above, we developed interactive co-design probes that (1) responds to specific challenges while also (2) showcasing relevant state-of-the-art generative  AI capabilities. These tools fulfilled three broader categories: (1) reference, capture, 3D-staging, (2) structure-to-style refinement, and (3) transparency, learning, community. While we presented them in isolation, participants were free to use them in any combination with one another, potentially across multiple steps to achieve more desired effects.
 
 % \todo{we need to recategorize these. also make clear what is from literature and what is new from us. change to novice artists.}
 
-\subsubsection{Structure-to-Style Refinement} tools help artists progressively convert initial ``structured'' forms (e.g., a basic shape, outline, style, or geometric layout) into more aesthetically complex or stylized versions. We find that the following tools for structure and style refinement - visual editing, style transfer, and medium transfer, can help address key needs raised by novice artists. 
+\subsubsection{Structure-to-Style Refinement} tools progressively convert initial ``structured'' forms (e.g., basic shape, outline, style, or geometric layout) into more aesthetically complex or stylized versions. 
+% We find that the following tools for structure and style refinement - visual editing, style transfer, and medium transfer, can help address key needs raised by novice artists. 
 
-\paragraph{(i) \underline{Visual editing}. } Traditional image editing with generative models is largely text-driven, requiring users to describe desired changes in words. Yet artists often find text prompts insufficient for capturing precise edits, particularly when they involve subtle spatial adjustments or specific visual details. To address this limitation, we use MagicQuill~\citep{liu2025magicquill}, an integrated image editing system that combines direct visual manipulation with generative editing. This interface allows users to sketch or mark directly on an existing image, such as drawing where a new element should be inserted, erasing unwanted objects, or adjusting color regions, while also supporting optional text instructions to refine intent (e.g., ``make the fish's mouth bigger''). This approach reduces the burden of linguistic description and gives designers more immediate, tangible control over how images are transformed.
+\paragraph{(i) \underline{Visual editing}. } Traditional image editing with generative models is largely text-driven, but artists often find text prompts insufficient for capturing precise edits. We leveraged MagicQuill~\citep{liu2025magicquill} to combines direct visual manipulation with generative editing, allowing users to sketch or mark directly on an existing image (), reducing the burden of linguistic description while affording immediate, tangible control.
+% over how images are 
+% , such as drawing where a new element should be inserted, erasing unwanted objects, or adjusting color regions, while also supporting optional text instructions to refine intent (e.g., ``make the fish's mouth bigger''). This approach transformed.
 
 \paragraph{(ii) \underline{Style transfer}.}
 % Designers often seek to apply the stylistic qualities of one work to the content of another \todo{paul - be more precise and quote the specific needs}.
@@ -37,8 +37,10 @@ To simplify the process of translating photographs, styles, or poses into a unif
 \paragraph{(ii) \underline{Interactive 3D editing}.}
 Some designers, particularly those working in 3D animation, want the ability to interactively manipulate meshes—for example, \textit{pulling the face of a 3D cat}. To explore this capability, we built a prototype that combines 2D editing with 3D reconstruction. The workflow begins with GPT-Image-1, which enables high-quality edits directly on a 2D rendering of the object. The modified image is then passed through Trellis~\citep{trellis}, which takes a 2D image and generate a corresponding 3D asset, allowing designers to see their edits materialize in three dimensions. This pipeline demonstrates how existing generative tools can be used to extend familiar 2D editing practices into interactive 3D design contexts.
 
-\subsubsection{Transparency, Learning, and Community.} The final set of tools help shape the creative and collaborative process groups of human artists. These tools help make the most salient parts of the input more transparent, such as highlighting visual information, obtaining simpler sketches, or summarizing the image using its key attributes. Transparent tools can also help learning and community building, through summarizing step-by-step tutorials of visual content to help artists to learn new techniques and styles, and cultivating a broader ecosystem of open-source tools, feedback loops, and shared knowledge.
+\subsubsection{Transparency, Learning, and Community.} The final set of tools help shape the creative and collaborative process groups of human artists. These tools help make the most salient parts of the input more transparent, such as highlighting visual information, obtaining simpler sketches, or summarizing the image using its key attributes. Transparent tools can also help learning and community building, through summarizing step-by-step tutorials of visual content to help artists learn new techniques and styles, and cultivating a broader ecosystem of open-source tools, feedback loops, and shared knowledge.
 
 \paragraph{(i) \underline{Step-by-step tutorial}.} 
 % \textit{``I want a step-by-step breakdown of how this cat painting was made.''} This type of request reflects designers’ desire not only to access finished works, but also to understand the process behind them \todo{paul - be more precise and quote the specific needs}. 
 To support learning art technique and style from existing work and make the learning process more transparent, we developed a prototype that generates process-oriented tutorials videos from a static image. Built on the PaintsUndo\footnote{https://github.com/lllyasviel/Paints-UNDO} project, the system disentangles a completed image into distinct stages of creation—such as sketching, inking, coloring and shading—and then animates these stages into a sequential video. By visualizing the intermediate steps, this prototype serves as a medium for teaching techniques and supports skill development.
+
+% no commercially available tools for needs 4.2-4.4, but they did have access to google search, etc.
