--- a/sections/1_intro.tex
+++ b/sections/1_intro.tex
@@ -1,24 +1,19 @@
 \section{Introduction}
-Visual art creation is a complex, multistage process requiring significant time, effort and material investment. 
-Recent advances and uses of generative AI show potential for supporting this intensive creation process through consistent, guided generation and editing \cite{zhang2023text} of increasingly realistic and detailed visual outputs \cite{podell2024sdxl}. 
-Such progress, coupled with lowered barriers of access, spark excitement around potentials for visual generative models to revolutionize and democratize art (education) communities \cite{paradox, democratize, edu}. 
-A burgeoning body of creativity support tools enabled by visual generative AI explored ways to augment the workflows of designers across various domains \cite{wang2025aideation, GenQuery, architectural}. 
+Visual art creation is a complex, multistage process requiring significant time, effort and material investment. Recent advances and uses of generative AI show potential for supporting this intensive creation process through consistent, guided generation and editing \cite{zhang2023text} of increasingly realistic and detailed visual outputs \cite{podell2024sdxl}. 
+Such progress, coupled with lowered barriers of access, spark excitement around the potentials for visual generative models to revolutionize and democratize art education and expand creative participation \cite{paradox, democratize, edu}. 
 
+While many %A burgeoning body of 
+creativity support tools enabled by visual generative AI have explored ways to augment the workflows of professional artists and designers across various domains \cite{wang2025aideation, GenQuery, architectural}, 
 % Despite the promise, recent scholarship studying the influence of generative systems on artists call for further engagement and foregrounding of input and opinions from the artistic community itself \cite{foreground, decolonial}.
-
-While designers create to serve commercial and professional purposes, novices may create to develop new techniques and capabilities \cite{clinical, personal}, practice self-expression \cite{real_benefits} or challenge conventional aesthetic and creative boundaries \cite{decline_novelty, art_implications}. The general-purpose and zero-shot nature of recent models as the potential to make art-making accessible to audiences with limited training\cite{lgtm}. In theory, this could allow for anyone interested in visual art-making to build skills to enjoy are making and learn to appreciate the craft with less of a barrier to entry. 
-% allowing them to produce high-quality and novel visual outputs at reduced costs and effort.
+%While designers create to serve commercial and professional purposes,
+novice visual artists often engage in art-making to %may create to develop new techniques and 
+explore new capabilities \cite{clinical, personal}, practice self-expression \cite{real_benefits} or challenge conventional aesthetic and creative boundaries \cite{decline_novelty, art_implications}. For those users, the general-purpose and zero-shot nature of recent models offer an exciting promise: to make art-making accessible to audiences with limited training \cite{lgtm}. In theory, such tools could empower more people to develop skills, enjoy the process of art making, and gain deeper appreciation for visual craft \cite{jackson}. % to appreciate the craft with less of a barrier to entry. 
 % But artmaking also benefits its creators -- helping them develop abstract capabilities (e.g., critical observation \cite{clinical} and reflection \cite{real_benefits}, creativity \cite{personal}, communication \cite{}, emotional expression \cite{}), and helping to enhance more measurable abilities such as academic performance \cite{grades} and memory \cite{memory}. 
 % (as opposed to self-expression and -improvement in artistic techniques) 
-This expansion of access to art (reference) creation tools opens up opportunities for broader perspectives and audiences to learn and benefit from the creative process of art-making \cite{jackson}.
+%This expansion of access to art (reference) creation tools opens up opportunities for broader perspectives and audiences to learn and benefit from the creative process of art-making \cite{jackson}.
 
-% \todo{motivation about upskilling novice workers.. reaching a broader community than only professionals.. potential for education etc. Hong: is it also fair to say that existing HCI work has largely focused on professional designers, while novice artists demand different form of support? Jane: yes we have evidence for this in 2.1}
-% Such developments lead scholars to consider how generative systems may challenge conventional aesthetic and creative boundaries \cite{synesthesia, art_implications} 
-% -- allowing novices \todo{we havent defined or motivated novices at this point yet} to produce high-quality and novel visual outputs without significant investment into materials or formal training.
-
-
-Yet, existing generative AI systems often fall short in supporting novice visual artists with effectively integrating capabilities into their creative processes \cite{unstraighten}, leaving them stressed and disoriented \cite{kawakami2024impact, lgtm} -- despite works demonstrating its potential to augment early stages of artistic creation \cite{art_implications, poet, lamuse}. 
-Few studies investigated how artists (especially novices \cite{hu2025designing}) adopted co-creation and inspiration tools to meaningfully organize and reflect on inputs \cite{lamuse}, leaving a critical gap in understanding how recent advances may align with early-stages workflows of novice visual artists \cite{botella2018stages}.
+Yet, existing generative AI systems often fall short in supporting novice visual artists, particularly in the early stage of the creative process. Prior work has highlighted the potential of AI to augment early ideation \cite{art_implications, poet, lamuse}, but novice artists often find these tools not being effectively integrated into their creative processes \cite{unstraighten}, leaving them stressed and disoriented \cite{kawakami2024impact, lgtm}. %-- despite works demonstrating its potential to augment early stages of artistic creation \cite{art_implications, poet, lamuse}. 
+%Few studies investigated how artists (especially novices \cite{hu2025designing}) adopted co-creation and inspiration tools to meaningfully organize and reflect on inputs \cite{lamuse}, leaving a critical gap in understanding how recent advances may align with early-stages workflows of novice visual artists \cite{botella2018stages}.
 % \begin{itemize}
     % \item define early stage (from Botella et al. this is immersion, reflection, and research process)
     % \item current co-creation and inspiration tools remain limited in how they help visual artists meaningfully organize and reflect on inputs
@@ -26,37 +21,16 @@ Few studies investigated how artists (especially novices \cite{hu2025designing})
     % \item 
 % \end{itemize}
 % \todo{merge with paragraph above on yet, existing generative } 
-Meanwhile, artists remain deeply distrusting of generative systems due to harmful downstream impacts on members of the artistic community (e.g., economic and reputational harms arising from inadequate attribution or compensation), raising questions about what artist-centered uses and developments of generative AI tools could look like. To date, the vast majority of studies among HCI and UIST focused on understanding and supporting final-stage outputs
-of professional designers \cite{design_professionals} and artists \cite{shi2023understanding}, while generative AI support for the early stages of novice visual artists workflows remain underexplored -- overlooking a key opportunity to bridge the gap between creativity support tools and emerging members of the artistic community.
+Meanwhile, artists remain deeply distrusting of generative systems due to harmful downstream impacts on members of the artistic community (e.g., economic and reputational harms arising from inadequate attribution or compensation), raising questions about what artist-centered, ethically sound uses and developments of generative AI tools could look like -- especially for those who just beginning their creative journeys. 
 
-% \todo{Hong: maybe here we reemphasize the gap again: lack of understanding/support of novice workflows, limited understanding of how genai might support early-stage ideation, instead of final output; misalignment/distruct between artists and existing tools?}
-% \todo{we dont talk about ethical challenges and harms..} as well as economic and reputational harms to their community members, raising urging questions about what accessible and equitable uses of generative AI tools could look like for artmaking. 
+To date, much of the HCI and UIST literature has focused on understanding and supporting final-stage outputs
+of professional designers \cite{design_professionals} and artists \cite{shi2023understanding}, while generative AI support for the early stages of novice visual artists workflows remain underexplored -- overlooking a key opportunity to bridge the gap between creativity support tools and emerging members of the artistic community. In particular, few studies have examined how novice artists \cite{hu2025designing} adopted co-creation and inspiration tools to meaningfully organize and reflect on inputs \cite{lamuse}, leaving a critical gap in understanding how emerging generative capabilities may align with early-stages workflows of novice visual artists \cite{botella2018stages}.
 
-% \textcolor{red}{Describe here our first contribution: A descriptive account of early-stage workflows for novice visual artists}
-
-% The literature, press and our own interview participants revealed how artist communities strongly resisted AI use – predominantly due to lack of attribution and accreditation \cite{credit} \todo{we dont talk about this also} (plagiarism \& copyright infringement) to the underlying artworks that are used to train and develop the model, as well as unpaid compensation to artists \cite{foreground}, resulting in financial and economic losses. Beyond legal and commercial concerns, environmental impacts and preferences for experience-inspired artworks also emerged as ethical and aesthetic concerns around AI-generated art \cite{versus}. 
-
-To better align visual generative AI tools with artist workflows and intentions during these early stages, this study considers alternative and non-professional use cases
-% Thus, instead of professional and commercial use cases such as design work, this study considers alternative uses of visual AI generation tools 
-that directly serve the artist communities that they benefit and profit from. While prior work focused on AI art \cite{explorers, machine} or final-image generation \cite{lgtm}, we employed a two-step approach to explore ways of 
-% generative AI tools might scaffold the 
-% maybe incorporate into related works?
-% Critical AI scholars point to the colonial \cite{decolonial}, imperial \cite{imperial} and anthropomorphic nature of commercial generative AI systems.
-% Generative AI has the potential to lower barriers to engage in visual art and expand access to creative tools, yet early-stage support for novice visual arts remains under-suporte and offen inaccessible. 
-% \todo{cite Ko et al.}
-% \todo{adapt from 1-pager}
-% Past empirical work with visual artists [9] found potential for LGTMs (large-scale text-to-image-generation models) to support artists in automating their creative processes, expanding idea exploration and mediating visual communication
-% However, artists interviewed in this study found current LGTMs disorienting and hard to use
-% Generative models are also found to lower barriers for visual storytelling
-% [there are more works discussing democratization/access]
-% [there are also many emerging techniques that may support casual/early-career artists]
-% Through a two-step approach, we explored ways of 
-integrating generative AI tools into the early-stage workflows of novice visual artists. First, we interviewed 15 novice artists about their existing practices to understand initial perceptions of available generative tools, as well as painpoints to their artistic creation processes (\S\ref{interview}). Then, we mapped these expressed needs to state-of-the-art technical advances, to develop and present six functional prototypes in codesign workshops with 14 novices (\S\ref{codesign}).
+To address these gaps, this study investigates how generative AI can meaningfully support the early-stage workflows of novice visual artists. %To better align visual generative AI tools with novice artist workflows and intentions during these early stages, this study considers alternative and non-professional use cases that directly serve the artist communities that they benefit and profit from. 
+While prior work focused on AI-generated art \cite{explorers, machine} or final-image generation \cite{lgtm}, we employed a two-step approach: %to explore ways of integrating generative AI tools into the early-stage workflows of novice visual artists. 
+(1) We interviewed 15 novice artists to understand their existing practices, initial perceptions of available generative tools, as well as painpoints to their artistic creation processes (\S\ref{interview}); (2) We mapped these expressed needs to state-of-the-art technical capabilities and develop six functional prototypes, which we evaluated in co-design workshops with 14 novice artists (\S\ref{codesign}).
 Leveraging state-of-the-art capabilities (e.g., medium and style transfer, visual combinations and editing, step-by-step tutorials and extensions of 2D into interactive 3D viewing),
-the interactive prototypes allowed us to probe novice artists for reactions and design objectives they prioritized for future forms of tooling support. 
-% These prototypes exposed 
-% By bringing these capabilities together we significantly advance the state-of-the-art in 
-% }
+these interactive prototypes allowed us to probe novice artists for reactions and design objectives they prioritized for future forms of tooling support. 
 
 % In this current moment of resistance towards AI use in the artist community, it’s crucial to ponder: 
 % what alternative worlds of practices — e.g., in training models and accrediting their sources – would artists require of model developers?
@@ -68,31 +42,22 @@ the interactive prototypes allowed us to probe novice artists for reactions and 
 % making sure outputs (and prompts) don’t belong to model creators
 % [maybe this is a better question for professional artists, but as a thought question, what would an artist’s AI bill of rights look like?]
 
-% \begin{itemize}
-    % \item we combine interview and co-design methods to surface both pain points and desirable futures for novice-facing tools
-    % \item online prior work focused on AI art or final-image generation, we explore how generative AI tools might scaffold \todo{add design objectives}
-% \end{itemize}
-
 \noindent \underline{Research questions}:
 \begin{enumerate}
-\item[\textbf{RQ 1a}] 
+\item[\textbf{RQ 1}] 
 \textbf{What processes do novice visual artists undertake to navigate early stages of their creative workflows, and what challenges do they encounter?}
-% \begin{enumerate}
-\item[\textbf{RQ 1b}] \textbf{Which of these early-stage challenges might align with emerging generative AI capabilities?}
-    % are the needs for tool support that have in the early stages?
-% \end{enumerate}
-% \item[\textbf{RQ 2}] 
-% \textbf{What are the needs for tool support that novice artists have in the early stages?}
-\item[\textbf{RQ 2a}] 
-\textbf{How do novice artists perceive opportunities for emerging capabilities to support their early-stage artmaking? 
-\item[\textbf{RQ 2b}] 
-What design tensions emerge when considering future advances and use cases of such capabilities?
-% What are the opportunities for supporting novice artists with generative AI capabilities in the early stages?
-}
+% \item[\textbf{RQ 1b}] \textbf{Which of these early-stage challenges might align with emerging generative AI capabilities?}
+\item[\textbf{RQ 2}] 
+\textbf{How do novice visual artists perceive the potential of emerging generative AI capabilities to support their early-stage needs, and what tensions do they foresee around their integration?}
+% \item[\textbf{RQ 2b}] 
+% \textbf{What design tensions emerge when considering future advances and use cases of such capabilities?}
+
 \end{enumerate}
-Our contributions
+
+Building on the above questions, we map early stage practice, probe emerging capabilities through co design and prototypes, and distill implications for toolmakers. Accordingly, this paper contributes.
+\aq{not happy with this but also don't know how ot improve it right now}
 \begin{itemize}
-    \item Empirical illustration of tensions of how novice artists use tools in the early stage
-    \item Design opportunities for creative support with generative AI tools for early-stage 
-    \item prototypes here
+     \item An empirical account of how novice artists use tools in the early stage and the challenges they face.
+    \item Empirically grounded capability requirements for early stage support that artists want in tools.
+    \item A synthesis of the tensions these tools raise and the implications for design and policy.
 \end{itemize}
